Update contact email to support@cbee.online

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
         <p>
           <strong>Effective Date:</strong> November 2025<br />
           <strong>Contact:</strong>
-          <a href="mailto:cbee69a@gmail.com">cbee69a@gmail.com</a>
+          <a href="mailto:support@cbee.online">support@cbee.online</a>
         </p>
 
         <!-- Introduction block to place above the existing <p> -->
@@ -1069,7 +1069,7 @@
 
         <p>
           Requests may be sent to
-          <a href="mailto:cbee69a@gmail.com">cbee69a@gmail.com</a>.
+          <a href="mailto:support@cbee.online">support@cbee.online</a>.
         </p>
 
         <p>
@@ -1161,7 +1161,7 @@
         <h2 id="contact_info">Contact Information</h2>
         <p>
           <strong>Contact:</strong>
-          <a href="mailto:cbee69a@gmail.com">cbee69a@gmail.com</a><br />
+          <a href="mailto:support@cbee.online">support@cbee.online</a><br />
           We aim to respond to all inquiries within
           <strong>3 business days</strong>.
         </p>
